--- a/app/templates/blog/post_detail.html
+++ b/app/templates/blog/post_detail.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- 文章內容 -->
-    <div x-show="!loading && post" class="max-w-4xl mx-auto px-4 py-8">
+    <div x-show="!loading && post" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
         <!-- 文章標題區 -->
         <header class="mb-8">
             <div class="text-center">
