--- a/app/templates/pages/privacy.html
+++ b/app/templates/pages/privacy.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="min-h-screen bg-gray-50 py-12">
-    <div class="container mx-auto px-4">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="max-w-4xl mx-auto">
             <!-- 頁面標題 -->
             <div class="text-center mb-12">
