--- a/app/templates/shop/cart.html
+++ b/app/templates/shop/cart.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}購物車 - BlogCommerce{% endblock %}
+{% block title %}購物車 - 伴獸家{% endblock %}
 
 {% block content %}
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8" x-data="cartApp()">
